--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <!--------------SWIPERJS END-------------->
 
 <link rel="stylesheet" href="floating-wpp.min.css">
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="syle.css">
 
 </head>
 
